@@ -1,3 +1,4 @@
+Made reset unpause the clock if paused.  Both tabs.
 Added and incorporated new images for light bulbs.
 # 0.00.41 (72581) Mar 21, 2013
 3/21/13 Version with fix for thermometer bug
